# G4LArBox

./: .gitignore  CMakeLists.txt  DockerFile  README.md  geant4docker  main.cc  make.sh  run1.mac  simplebox.mac  singlegun.mac
data/: PlotParticleLifetimes.c  PlotParticleTrajectories.c  runplots.sh
include/: ActionInitialisation.hh  ActionInitialization.hh  DataHandler.hh  DetectorConstruction.hh  EventAction.hh  MediumResponse.hh  Messenger.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
source/: ActionInitialisation.cc  ActionInitialization.cc  DataHandler.cc  DetectorConstruction.cc  EventAction.cc  Main.cc  MarleyGenerator.cc  MediumResponse.cc  Messenger.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
